@@ -6,8 +6,8 @@ import dev.ftb.mods.ftblibrary.ui.Theme;
 import dev.ftb.mods.ftblibrary.ui.Widget;
 import net.github.dctime.libs.ftbquests.FormattedTextGetterSetter;
 import net.github.dctime.libs.Translator;
-import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.FormattedText;
+import net.minecraft.util.text.ITextProperties;
+import net.minecraft.util.text.StringTextComponent;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.injection.At;
@@ -16,13 +16,14 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Mixin(TextField.class)
 public abstract class TextFieldMixin extends Widget implements FormattedTextGetterSetter {
     @Shadow(remap = false)
-    private FormattedText[] formattedText;
+    private ITextProperties[] formattedText;
 
-    private FormattedText rawTranslatedText;
+    private ITextProperties rawTranslatedText;
 
     @Shadow(remap = false)
     public abstract TextField resize(Theme theme);
@@ -39,17 +40,17 @@ public abstract class TextFieldMixin extends Widget implements FormattedTextGett
 //        System.out.println("TextField mixin appled!");
     }
 
-    public FormattedText[] getFormattedText() {
+    public ITextProperties[] getFormattedText() {
         return formattedText;
     }
 
     public void setTranslatedFormattedText(String text) {
-        rawTranslatedText = FormattedText.of(" " + text, Translator.translatedStyle);
+        rawTranslatedText = new StringTextComponent(" " + text).setStyle(Translator.translatedStyle);
         // reflow with the translated text
         Theme theme = this.getGui().getTheme();
-        List<FormattedText> fullText = new java.util.ArrayList<>(Arrays.stream(formattedText).toList());
+        List<ITextProperties> fullText = new java.util.ArrayList<>(Arrays.stream(formattedText).collect(Collectors.toList()));
         fullText.add(rawTranslatedText);
-        this.formattedText = (FormattedText[])theme.listFormattedStringToWidth(FormattedText.composite(fullText), this.maxWidth).toArray(new FormattedText[0]);
+        this.formattedText = (ITextProperties[])theme.listFormattedStringToWidth(ITextProperties.composite(fullText), this.maxWidth).toArray(new ITextProperties[0]);
         resize(theme);
     }
 }
